--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ deploy:
   github-token: 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
   keep-history: true
   on:
-    branch: main
+    branch: master
   local-dir: public
